methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:20: error: value grey is not a member of object java.awt.Color
  centre(Color.grey,Color.black)
               ^